- Fix MDEV-7879 by adding a test in all SetValue_pval function to return when valp == this.

- Fix MDEV-7840 by making proper datetime constant in ha_connect::CheckCond on a second place.